k8s/staging/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: golf-app-staging
spec:
  redirectScheme:
    scheme: https
    permanent: true
