k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: golf-app-be-staging
  namespace: golf-app-staging
spec:
  selector:
    matchLabels:
      app: golf-app-be-staging
  replicas: 1
  template:
    metadata:
      labels:
        app: golf-app-be-staging
    spec:
      containers:
        - name: golf-app-be-staging
          image: git.empatnusabangsa.com/empatnusabangsa/golf-app-be:36
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: regcred
