k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golf-app-be-staging-service
  namespace: golf-app-staging
  labels:
    run: golf-app-be-staging
spec:
  ports:
    - port: 5000
      protocol: TCP
  selector:
    app: golf-app-be-staging
